# ci-example

./: .gitignore  CMakeLists.txt  README.md  main.c  main_test.cpp  utils.c
.github/workflows/: ci.yml
include/: utils.h
